подправил баг в openapi файле
